Fixed alignment and removed duplicate code

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,9 @@
 }
 
 .title {
+    margin-left: 8px;
+    font-size: 18px;
+    font-weight: 500;
     color: white;
 }
 
